--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,17 +19,26 @@ play.crypto.secret = "d3AQ:c8NOG0Xgzt;HN`lkg1if[/Mja?phfOn?PLDSC1=EysoaTWK8S`<h;
 play.i18n.langs = [ "en" ]
 
 # Database configuration
-# ~~~~~ 
+# ~~~~~
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://api.template-java.com:3306/play"
+# db.default.driver=com.mysql.jdbc.Driver
+# db.default.url="jdbc:mysql://api.template-java.com:3306/play"
+# db.default.username=root
+# db.default.password=""
+# db.default.logStatements=true
+# db.default.jndiName=DefaultDS
+# jpa.default=mySqlPersistenceUnit
+
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://localhost/playdb"
+#db.default.url="jdbc:postgresql://database.example.com/playdb"
 db.default.username=root
 db.default.password=""
-db.default.logStatements=true
 db.default.jndiName=DefaultDS
-jpa.default=mySqlPersistenceUnit
+jpa.default=defaultPersistenceUnit
+
 
 # Logger
 # ~~~~~
