--- a/config/database.yml
+++ b/config/database.yml
@@ -14,14 +14,17 @@ default: &default
 development:
   <<: *default
   #database: db/development.sqlite3
-  database: smartcook_development
+  database: postgres
   username: postgres
+  host: localhost
+  port: 5432
 
 production:
   <<: *default
-  host: 23.96.13.44
-  username: postgres
-  password: postgres
+  host: 13.92.234.146
+  username: smartcookdb
+  password: Smartcookutn14
+  port: 5432
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
