--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ development:
 production:
   <<: *default
   host: 13.92.234.146
-  username: smartcookdb
+  username: postgres
   password: smartcookdb
   port: 5432
 
