--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,23 @@
+# == Schema Information
+#
+# Table name: users
+#
+#  id         :integer          not null, primary key
+#  username   :string
+#  name       :string
+#  email      :string
+#  password   :string
+#  avatar     :string
+#  birthdate  :datetime
+#  gender     :string
+#  vegetarian :boolean
+#  vegan      :boolean
+#  celiac     :boolean
+#  diabetic   :boolean
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
