--- a/test/fixtures/ingredients.yml
+++ b/test/fixtures/ingredients.yml
@@ -2,20 +2,20 @@
 #
 # Table name: ingredients
 #
-#  id            :integer          not null, primary key
-#  name          :string
-#  image_url     :string
-#  category_id   :integer
-#  vegetarian    :boolean
-#  vegan         :boolean
-#  celiac        :boolean
-#  diabetic      :boolean
-#  calories      :integer
-#  proteins      :integer
-#  carbohydrates :integer
-#  fats          :integer
-#  created_at    :datetime         not null
-#  updated_at    :datetime         not null
+#  id               :integer          not null, primary key
+#  name             :string
+#  image_url        :string
+#  food_category_id :integer
+#  vegetarian       :boolean
+#  vegan            :boolean
+#  celiac           :boolean
+#  diabetic         :boolean
+#  calories         :integer
+#  proteins         :integer
+#  carbohydrates    :integer
+#  fats             :integer
+#  created_at       :datetime         not null
+#  updated_at       :datetime         not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
