--- a/test/fixtures/ingredients_per_recipes.yml
+++ b/test/fixtures/ingredients_per_recipes.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: ingredients_per_recipes
+#
+#  id            :integer          not null, primary key
+#  ingredient_id :integer
+#  recipe_id     :integer
+#  amount        :integer
+#  unit          :string
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
