--- a/test/fixtures/recipes.yml
+++ b/test/fixtures/recipes.yml
@@ -12,10 +12,10 @@
 #  vegan       :boolean
 #  celiac      :boolean
 #  diabetic    :boolean
-#  steps       :text
-#  tips        :text
 #  created_at  :datetime         not null
 #  updated_at  :datetime         not null
+#  steps       :string           default([]), is an Array
+#  tips        :string           default([]), is an Array
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
