--- a/test/fixtures/recipes_per_users.yml
+++ b/test/fixtures/recipes_per_users.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: recipes_per_users
+#
+#  id         :integer          not null, primary key
+#  recipe_id  :integer
+#  user_id    :integer
+#  favorite   :boolean          default(FALSE)
+#  owned      :boolean          default(FALSE)
+#  vote       :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
