--- a/test/fixtures/recipes_per_users.yml
+++ b/test/fixtures/recipes_per_users.yml
@@ -10,6 +10,7 @@
 #  vote       :integer
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  username   :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
