--- a/test/fixtures/frequent_users.yml
+++ b/test/fixtures/frequent_users.yml
@@ -4,11 +4,11 @@
 #
 #  id                :integer          not null, primary key
 #  user_id           :integer
-#  frecuent_user_id  :integer
+#  frequent_user_id  :integer
 #  created_at        :datetime         not null
 #  updated_at        :datetime         not null
 #  username          :string
-#  frecuent_username :string
+#  frequent_username :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
