--- a/test/fixtures/ingredients_per_users.yml
+++ b/test/fixtures/ingredients_per_users.yml
@@ -8,6 +8,7 @@
 #  created_at    :datetime         not null
 #  updated_at    :datetime         not null
 #  username      :string
+#  excluded      :boolean
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
