relation between original recipe and updated

--- a/test/fixtures/recipes.yml
+++ b/test/fixtures/recipes.yml
@@ -16,6 +16,7 @@
 #  updated_at  :datetime         not null
 #  steps       :string           default([]), is an Array
 #  tips        :string           default([]), is an Array
+#  original    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
