--- a/test/fixtures/ingredients.yml
+++ b/test/fixtures/ingredients.yml
@@ -16,6 +16,7 @@
 #  fats             :integer
 #  created_at       :datetime         not null
 #  updated_at       :datetime         not null
+#  name_id          :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
