--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -16,6 +16,7 @@
 #  diabetic   :boolean
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  admin      :boolean
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
