--- a/test/fixtures/ingredients_per_recipes.yml
+++ b/test/fixtures/ingredients_per_recipes.yml
@@ -5,10 +5,10 @@
 #  id            :integer          not null, primary key
 #  ingredient_id :integer
 #  recipe_id     :integer
-#  amount        :integer
 #  unit          :string
 #  created_at    :datetime         not null
 #  updated_at    :datetime         not null
+#  amount        :float
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
