--- a/test/fixtures/badges.yml
+++ b/test/fixtures/badges.yml
@@ -8,6 +8,8 @@
 #  image_url   :string
 #  created_at  :datetime         not null
 #  updated_at  :datetime         not null
+#  type        :string
+#  amount      :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
