likes and votes in recipes

--- a/test/fixtures/recipes.yml
+++ b/test/fixtures/recipes.yml
@@ -16,6 +16,8 @@
 #  updated_at  :datetime         not null
 #  steps       :string           default([]), is an Array
 #  original    :integer
+#  likes       :integer
+#  votes       :float
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
