--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -17,6 +17,7 @@
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  admin      :boolean
+#  enabled    :boolean
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
